tests/ui/traits/coercion-generic-bad.stderr
error[E0277]: the trait bound `Struct: Trait<isize>` is not satisfied
  --> $DIR/coercion-generic-bad.rs:16:36
   |
LL |     let s: Box<dyn Trait<isize>> = Box::new(Struct { person: "Fred" });
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait<isize>` is not implemented for `Struct`
   |
   = help: the trait `Trait<&'static str>` is implemented for `Struct`
   = help: for that trait implementation, expected `&'static str`, found `isize`
   = note: required for the cast from `Box<Struct>` to `Box<dyn Trait<isize>>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
